# TokyoApps-Multispace-IA

./: .codecov.yml  .dockerignore  .env.example  .flake8  .gitignore  .golangci.yml  .pre-commit-config.yaml  .vercelignore  AGENTS_README.md  Agentes y bots.txt  BUILD_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cuerpo  DEPENDENCY_AGENT_SUMMARY.md  DEPLOY_VERCEL.md  DIRECCION_ELARA.md  Dockerfile  ELARA.md  Fllutter  GIT_AUTOMATION_AGENTS.md  IMPERIAL_ELITE_ORCHESTRATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_BOTS.md  IMPLEMENTATION_SUMMARY_HYBRID.md  IMPLEMENTATION_SUMMARY_PR_AUTOMATION.md  Imitar  LICENSE  Makefile  P1_IMPLEMENTATION_SUMMARY.md  PIPELINE_GUIDE.md  PRIVACY.md  PRODUCTION_READY.md  QUICKSTART_VERCEL.md  README-python.md  README.md  REPO_STRUCTURE_TREE.md  Real  SECURITY.md  (+25 more)
.githooks/: pre-commit
.github/: AGENT_AREAS.md  ELARA_COMMAND_CENTER.md  ELARA_DASHBOARD.md  PULL_REQUEST_GUIDELINES.md  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  branch-cleanup-exclude.txt  commitlint.config.js  copilot-instructions.md  dependabot.yml  labeler.yml  pr-automation-config.yml  pull_request_template.md  release-drafter.yml
SYNEMU/: README.md
admin/: hello.go  hello_test.go
agents/: .dockerignore  .gitignore  Dockerfile  README.md  agent.go  agent_codemaster.go  agent_dashboard.py  agent_deploy.go  agent_genai.go  agent_knowledge.go  agent_qa.go  agent_sentiment.go  agent_unrestricted.go  agents_test.go  autodev.agent  autodev_executor.sh  brand.agent  brand_executor.sh  bridge.agent  bridge_executor.sh  codemaster.go  deploy.go  genai.go  generate_html_report.py  knowledge.go  parallel_execution.sh  qa.go  run_agents.sh  sentiment.go  test_all_apis.py  test_free_apis.py  test_tokyo_crew.py  tokyo_crew.py  unrestricted.go  ux.agent  ux_executor.sh
api/: agents.py  health.py  index.py  metrics.py  requirements.txt
app/: README.md  build.gradle  gradle.properties  proguard-rules.pro
cmd/: main.go  main_test.go  tokyoia.go
config/: ai_models.yaml  features.yaml  hello.go  hello_test.go
db/: README.md  schema.sql
docs/: AGENT_AUTOMATION.md  ANALYTICS_GUIDE.md  API.md  ARCHITECTURE.md  ATHENA_SETUP.md  AWS_SETUP.md  BENCHMARK.md  BRANCH_CLEANUP.md  BRANCH_PROTECTION.md  BUILD.md  CHANGELOG.md  CICD.md  CI_CD.md  CONTRIBUTING.md  DEPENDENCY_POLICY.md  ELITE_FRAMEWORK_EXAMPLES.md  ETL_PIPELINE.md  FEATURES.md  FINAL_SUMMARY.md  GLOSSARY.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_AI.md  PLAY_STORE_CHECKLIST.md  PRICING.md  PRIVACY_POLICY.md  PR_AUTOMATION.md  PR_AUTOMATION_FLOWS.md  PR_AUTOMATION_QUICK_GUIDE.md  PR_AUTOMATION_VALIDATION.md  QUERIES_EXAMPLES.md  QUICKSTART.md  README.md  ROADMAP.md  SECRETS.md  SECRETS_SETUP.md  STORE_LISTING.md  TODO_AI.md  VERCEL_SETUP.md  (+9 more)
emulator/: run_emulator.sh
examples/: QUICKSTART.md  README.md  orchestration_demo.py
flutter_app/: .env.example  .gitignore  BUILD_AGENT_REPORT.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATISTICS.md  README.md  analysis_options.yaml  build_agent.sh  build_agent_mock.sh  pubspec.yaml
giphu/: README.md  example_workflow.md  template.md
hojas_membretadas/: tokraggcorp_letterhead.md  tokyoapps_letterhead.md
infrastructure/: README.md  athena.tf  glue.tf  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
instructivos/: synemu_installation_guide.md  synemu_quick_start.md
internal/: hello.go  hello_test.go
lib/: hello.go  hello_test.go
manuales/: synemu_user_manual.md
notebooks/: .env.example  README.md  the_closer_experiment.ipynb
orchestrator/: .dockerignore  Dockerfile  run_flow.sh
plantillas/: synemu_project_template.md  synemu_technical_spec_template.md
prompts/: GitHub-Pro.md  IA suprema  JS-Supremo.md
proto/: hello.proto  tokyoia.proto
recursos_identidad/: brand_guidelines.md  synemu_logo.placeholder.txt  tokraggcorp_logo_primary.placeholder.txt  tokyoapps_logo_primary.placeholder.txt
reportes_graficos/: README.md
runners/: Dockerfile.docker  Dockerfile.python  README.md  docker-compose.yml  entrypoint-docker.sh  entrypoint.sh  prometheus.yml  runner-deployment.yaml
scripts/: backfill_data.py  bump-version.sh  cleanup-branches.sh  create_and_merge_pr.sh  demo-ai-integration.sh  deploy-vercel.sh  deploy.sh  deploy_with_agents.sh  generate-project.sh  generate-release.sh  generate_agent_report.py  git_agent_cli.py  intelligent_automation.py  k8s-preflight.sh  p1_implementation_with_agents.sh  run_etl.sh  setup_athena.sh  tokyo-cli.py  validate-vercel-config.sh  (+1 more)
(+409 files in other folders)
